# Philosophical-debate-simulator

./: .envexample.generated  Dockerfile  README.md  app.py  example.txt  langgraph.json  main.py  notebook.ipynb  pyproject.toml  streamlit_app.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/philo_agent/: app.py
src/philo_agent/graphs/: create_philosophers.py  main_graph.py
src/philo_agent/retrieval/: __init__.py  retrieve_tavily.py  wikipedia.py
src/philo_agent/schemas/: philosopher.py
