[project]
name = "philosophical-debates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "langgraph-api>=0.7.17",
    "langgraph-cli>=0.4.12",
    "langsmith>=0.6.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.21",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
]
